Cambio enlaces, guardo en carpetas la html

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <link rel="stylesheet" href="css/style.css">
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="img_nav" href="http://127.0.0.1:5500/index.html?#"></a>
-            <a class="navbar-brand titulo_nav" href="http://127.0.0.1:5500/index.html?#">APRENDIENDO JAVA COMO UN
+            <a class="img_nav" href="index.html"></a>
+            <a class="navbar-brand titulo_nav" href="index.html">APRENDIENDO JAVA COMO UN
                 CAMPEON!</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,9 +39,9 @@
             </button>
             <nav id="botonera_navegacion">
                 <ul>
-                    <li><a href="http://127.0.0.1:5500/traductor.html">Traductor</a></li>
-                    <li><a href="http://127.0.0.1:5500/calcular.html?#">Calcular</a></li>
-                    <li><a href="http://127.0.0.1:5500/impresion.html?#">Impresión</a></li>
+                    <li><a href="/subPaginas/traductor.html">Traductor</a></li>
+                    <li><a href="/subPaginas/calcular.html">Calcular</a></li>
+                    <li><a href="/subPaginas/impresion.html">Impresión</a></li>
                 </ul>
             </nav>
     </header>
