--- a/subPaginas/calcular.html
+++ b/subPaginas/calcular.html
@@ -6,31 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScrip</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="../css/style.css">
+    <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--Icono de pestaña-->
     <link rel="icon" href="img/favicon_casa8 (1).png">
 
-    <script src="js/jquery-3.6.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/jquery-3.6.1.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 </head>
 <style>
     html {
         min-height: 100%;
+    }
+    body {
+
+    background-color: #000000;
     }
 </style>
 
 <body>
     
     <!--Navegador-->
-    <link rel="stylesheet" href="css/style.css">
+
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="img_nav" href="http://127.0.0.1:5500/index.html?#"></a>
-            <a class="navbar-brand titulo_nav" href="http://127.0.0.1:5500/index.html?#">APRENDIENDO JAVA COMO UN
+            <a class="img_nav" href="../index.html"></a>
+            <a class="navbar-brand titulo_nav" href="../index.html">APRENDIENDO JAVA COMO UN
                 CAMPEON!</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,9 +42,9 @@
             </button>
         <nav id="botonera_navegacion">
             <ul>
-                <li><a href="http://127.0.0.1:5500/traductor.html">Traductor</a></li>
-                <li><a href="http://127.0.0.1:5500/calcular.html?#">Calcular</a></li>
-                <li><a href="http://127.0.0.1:5500/impresion.html?#">Impresión</a></li>
+                <li><a href="traductor.html">Traductor</a></li>
+                <li><a href="calcular.html">Calcular</a></li>
+                <li><a href="impresion.html">Impresión</a></li>
             </ul>
         </nav>
     </header>
@@ -71,9 +75,9 @@
             </div>
 
         </div>
-
+    <script src="../js/calcular.js"></script>
     <!--Conexion JavaScrip-->
-    <script src="js/calcular.js"></script>
+
 </body>
 
 </html>
