--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 <body>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="img_nav" href="index.html"></a>
@@ -39,9 +39,9 @@
             </button>
             <nav id="botonera_navegacion">
                 <ul>
-                    <li><a href="Javascrip-Condicionales/subPaginas/traductor.html">Traductor</a></li>
-                    <li><a href="Javascrip-Condicionales/subPaginas/calcular.html">Calcular</a></li>
-                    <li><a href="Javascrip-Condicionales/subPaginas/impresion.html">Impresión</a></li>
+                    <li><a href="subPaginas/traductor.html">Traductor</a></li>
+                    <li><a href="subPaginas/calcular.html">Calcular</a></li>
+                    <li><a href="subPaginas/impresion.html">Impresión</a></li>
                 </ul>
             </nav>
     </header>
